--- a/librelane/config.yaml
+++ b/librelane/config.yaml
@@ -12,15 +12,15 @@ meta:
     Checker.KLayoutAntenna: null
 
     # Save time
-    OpenROAD.STAPrePNR: null
-    OpenROAD.STAMidPNR*: null
+    #OpenROAD.STAPrePNR: null
+    #OpenROAD.STAMidPNR*: null
 
     # Magic reports some overlaps which can be ignored
     Checker.IllegalOverlap: null
     
     # Some warnings in the SoC
     # GL simulation is fine
-    Checker.YosysSynthChecks: null
+    #Checker.YosysSynthChecks: null
     
     # Setup violations don't matter (for now)
     Checker.SetupViolations: null
@@ -31,24 +31,34 @@ meta:
     Checker.KLayoutDensity: null
 
     # Save time - we run DRC afterwards
-    KLayout.DRC: null
+    #KLayout.DRC: null
     Magic.DRC: null
 
 
 DESIGN_NAME: croc_chip
 USE_SLANG: true
 
+SLANG_ARGUMENTS: ['--keep-hierarchy']
+SYNTH_HIERARCHY_MODE: flatten
+SYNTH_KEEP_HIERARCHY_MIN_COST: 3000
+
 CLOCK_PERIOD: 20
 CLOCK_PORT: clk_i
 CLOCK_NET: pad_clk_i/p2c
-#CTS_SINK_CLUSTERING_ENABLE: true
 
 FP_SIZING: absolute
 DIE_AREA:  [   0.00,   0.00, 2000.00, 2000.00]
 CORE_AREA: [ 362, 362, 1638, 1638]
-PL_TARGET_DENSITY_PCT: 55
 
-MAX_FANOUT_CONSTRAINT: 6
+PL_TARGET_DENSITY_PCT: 60
+MAX_FANOUT_CONSTRAINT: 8
+DESIGN_REPAIR_MAX_SLEW_PCT: 30
+RUN_POST_GRT_DESIGN_REPAIR: true
+PL_RESIZER_HOLD_SLACK_MARGIN: 0.2
+
+PNR_SDC_FILE: dir::scripts/constraints.sdc
+SIGNOFF_SDC_FILE: dir::scripts/constraints.sdc
+FALLBACK_SDC: dir::scripts/constraints.sdc
 
 PDN_CORE_RING: true
 PDN_CORE_RING_CONNECT_TO_PADS: true
@@ -83,12 +93,12 @@ IGNORE_DISCONNECTED_MODULES:
 PAD_WEST: [
   "vdd_pads\\[0\\].vdd_pad",
   "vss_pads\\[0\\].vss_pad",
-  "pad_clk_i",
   "pad_rst_ni",
   "pad_ref_clk_i",
   "jtag_inputs_io\\[0\\].in",
   "jtag_inputs_io\\[1\\].in",
   "jtag_inputs_io\\[2\\].in",
+  "pad_clk_i",
   "jtag_inputs_io\\[3\\].in",
   "pad_jtag_tdo_o",
   "pad_uart_rx_i",
@@ -173,10 +183,10 @@ MACROS:
       "*_slow_1p08V_125C":
         - pdk_dir::libs.ref/sg13g2_sram/lib/RM_IHPSG13_1P_256x64_c2_bm_bist_slow_1p08V_125C.lib
     instances:
-      i_croc_soc.i_croc.gen_sram_bank[0].i_sram.gen_512x32xBx1.i_cut:
+      i_croc_soc.i_croc/gen_sram_bank[0].i_sram.gen_512x32xBx1.i_cut:
         location: [500, 390]
         orientation: S
-      i_croc_soc.i_croc.gen_sram_bank[1].i_sram.gen_512x32xBx1.i_cut:
+      i_croc_soc.i_croc/gen_sram_bank[1].i_sram.gen_512x32xBx1.i_cut:
         location: [500, 1450]
         orientation: N
 
